--- a/0x00-html_advanced/article.html
+++ b/0x00-html_advanced/article.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-        <title>Homepage - Techium</title>
+        <title>Article - Techium</title>
         <meta name="description" content="Techium is a digital agency">
         <link rel="icon" type="image/x-icon" href="./favicon.ico
 ">
@@ -15,6 +15,7 @@
         </header>
         <main>
             Main content
+            <aside>Aside</aside>
         </main>
         <footer>
             Footer
