--- a/0x00-html_advanced/11-styleguide.html
+++ b/0x00-html_advanced/11-styleguide.html
@@ -10,6 +10,9 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
+        <header>
+            
+        </header>
         <main>
             <section>
                 <header>
@@ -23,5 +26,8 @@
                 <h1>Heading level 6</h1>
             </section>
         </main>
+        <footer>
+            
+        </footer>
     </body>
 </html>
