--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -10,8 +10,8 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
-        
-        <!-- Header to help with scanning your code -->
+
+        <!-- Header -->
         <header>
             <div>
                 <span>Techium</span>
@@ -19,7 +19,7 @@
             </div>
         </header>
 
-        <!-- Main to help with scanning your code -->
+        <!-- Main -->
         <main>
             <h1>Homepage</h1>
 
@@ -143,7 +143,7 @@
             </div>
         </main>
 
-        <!-- Footer to help with scanning your code -->
+        <!-- Footer -->
             <footer>
                 <div>
                     Footer
