--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -144,10 +144,14 @@
                             </blockquote>
                             </article>
                             <article>
-                                <blockquote>Thank you so much for your help. Techium company is awesome!<cite>Dorrie S.</cite></blockquote>
+                                <blockquote>Thank you so much for your help. Techium company is awesome!
+                                    <cite>Dorrie S.</cite>
+                                </blockquote>
                             </article>
                             <article>
-                                <blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company.<cite>Sven H.</cite></blockquote>
+                                <blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company.
+                                    <cite>Sven H.</cite>
+                                </blockquote>
                             </article>
                         </div>
                     </div>
