--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -139,8 +139,8 @@
                         <div>
                             <article>
                                 <blockquote>
-                                Thank you so much for your help. Techium company is awesome!
-                                <cite>Dorrie S.</cite>
+                                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+                                <cite>Yuri Y.</cite>
                             </blockquote>
                             </article>
                             <article>
