--- a/0x00-html_advanced/34-styleguide.html
+++ b/0x00-html_advanced/34-styleguide.html
@@ -169,7 +169,7 @@
                     <details open>
                         <summary>Always open</summary>
                         <p>summary: Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                    </details>
+                    code 39 </details>
         </div>
             </section>
         </main>
