--- a/0x02-CSS_advanced/index.html
+++ b/0x02-CSS_advanced/index.html
@@ -8,6 +8,7 @@
         <link rel="icon" type="image/png" href="images/favicon.jpg" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet"/>
         <link rel="stylesheet" href="#" />
+        <link rel="stylesheet" href="styles/19-style.css">
     </head>
     <body>
     <!-- Header -->
